samples/_failures_safe/1761075589_f4c50a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e96f845.c: In function ‘main’:
./samples/SAFE/__tmp_1e96f845.c:147:20: error: missing terminating " character
  147 |             printf("Matrix B:\
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_1e96f845.c:147:13: error: expected expression at end of input
  147 |             printf("Matrix B:\
      |             ^~~~~~
./samples/SAFE/__tmp_1e96f845.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e96f845.c:147:13: error: expected declaration or statement at end of input
